# agentic-coding-tutor

./: .gitignore  docker-compose.yaml
backend/: .coverage  .env  .gitignore  .vercelignore  CHATKIT_README.md  CHATKIT_STATUS.md  Dockerfile  README.md  chatkit_server.py  chatkit_store.py  inspect_agents.py  main.py  mentor_sessions.db  mentor_sessions.db-shm  mentor_sessions.db-wal  pyproject.tomjkjk  pyproject.toml  pyproject.tomlll  pytest.ini  requirements.txt  test_mentor_api.py  vercel.json  worker.py
backend/actions/: save_course.py
backend/activities/: course_activities.py
backend/ai_agents/: code_review_agent.py  course_generation_agent.py  curriculum_outline_agent.py  explanation_agent.py  flashcards_agent.py  guardrails.py  mentor_agent.py  questions_agent.py  triage_agent.py
backend/config/: payment_constants.py
backend/migrations/: 001_add_gamification_fields.sql  002_add_mentor_chat_history.sql  002_create_mentor_sessions.sql  create_chatkit_tables.sql  create_mentor_conversations.sql
backend/models/: gemini.py
backend/schemas/: code_review_schemas.py  curriculum_outline.py  explanation_output.py  flashcards_output.py  full_course.py  mentor_schemas.py  questions_output.py  user_profile_context.py
backend/scripts/: verify_gamification.py
backend/tests/: conftest.py  test_auth.py  test_code_review.py  test_courses.py  test_guardrails.py  test_mentor.py
backend/utils/: extract_forecast_data.py  gamification.py  mentor_utils.py  repair_json.py  stripe_utils.py  supabase_client.py  supabase_session.py
backend/workflows/: course_workflow.py
(+147 files in other folders)
